# identity-bot

./: .gitignore  .replit  README.md  replit.nix  requirements.txt
replit/: local.sh  replit.sh
replit/backend/: build.sh  canadian_party_support_by_group.csv  celery_app.py  celery_signals.py  dependencies.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_db.py
replit/backend/api/v1/: api.py
replit/backend/api/v1/endpoints/: health.py  persistence.py  processor.py  query.py  tasks.py
replit/backend/config/: config.py
replit/backend/db/: pinecone_db.py  postgresql.py
replit/backend/infra/: logger.py  timing.py
replit/backend/migrations/: 001_create_partysupport.sql
replit/backend/models/: request.py  response.py  sql.py
replit/backend/service/: __init__.py  client.py  conversation.py  csv_processor.py  healthcheck.py  ingestion.py  openai_embedder.py  query.py  session.py  summarizer.py
replit/backend/tasks/: background_tasks.py
replit/backend/tests/: test_embedder.py  test_endpoints.py  test_healthcheck.py  test_ingestion.py  test_processor_service.py  test_query.py
replit/backend/tools/: search.py
replit/backend/utils/: keepalive.py
replit/dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.js
replit/dashboard/src/app/: globals.css  layout.tsx  page.tsx
replit/dashboard/src/app/api/process-csv/: route.ts
replit/frontend/: package-lock.json  package.json
replit/frontend/public/: index.html
replit/frontend/src/: App.js  Variables.js  index.css
replit/frontend/src/components/: Cookie.jsx  DemoQ.jsx  Message.jsx
