[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "identity-bot-backend"
version = "1.0.0"
description = "Identity bot used to help immigrants identify their political identity"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Bradley Eugene Sakran", email = "bradeu01@gmail.com" },
]
keywords = ["fastapi", "rag", "nlp", "political-analysis", "multilingual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Researchers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    # Core Web Framework
    "fastapi==0.116.1",
    "uvicorn[standard]",

    # Data Validation
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",

    # Task Queue
    "celery==5.3.4",
    "redis==5.0.1",

    # Vector Database
    "pinecone==7.3.0",

    # AI/ML
    "openai==1.78.1",
    "numpy",

    # PostgreSQL
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0.0",

    # Configuration
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
    
    # Code Quality
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "pre-commit==3.6.0",
    
    # Documentation
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.3",
    "mkdocstrings[python]==0.24.0",
]

production = [
    # Production monitoring
    "gunicorn==21.2.0",
    "prometheus-client==0.19.0",
    "sentry-sdk[fastapi]==1.40.0",
]

[project.urls]
Homepage = "https://github.com/ubc-political-science/multilingual-rag"
Documentation = "https://github.com/ubc-political-science/multilingual-rag/docs"
Repository = "https://github.com/ubc-political-science/multilingual-rag.git"
Issues = "https://github.com/ubc-political-science/multilingual-rag/issues"

[project.scripts]
start-api = "main:app"

# Tool configurations
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "service: marks tests as service layer tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "build/*",
    "dist/*",
    "*.egg-info/*",
    "chroma_db/*",
    "static/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | chroma_db
  | static
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/chroma_db/*", "*/static/*"]

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "chroma_db",
    "static",
]
per-file-ignores = [
    "__init__.py:F401",  # imported but unused
    "test_*.py:F401,F811",  # test files can have unused imports and redefinitions
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "openai.*",
    "pinecone.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "tests",
    "chroma_db",
    "static",
    "*.pyc",
    "__pycache__",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "chroma_db",
    "static",
    "*.pyc",
    "__pycache__",
]

# Environment configuration for development
[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov", 
    "httpx",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=. --cov-report=term-missing {args:tests}"
lint = [
    "flake8 .",
    "black --check --diff .",
    "isort --check-only --diff .",
]
format = [
    "black .",
    "isort .",
]
type-check = "mypy ."
check = [
    "lint",
    "type-check", 
    "test-cov",
]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8001"

# Production environment
[tool.hatch.envs.prod]
dependencies = [
    "gunicorn",
    "prometheus-client", 
    "sentry-sdk[fastapi]",
]